--- a/sql-flow-connectors/sql-flow-jdbc/pom.xml
+++ b/sql-flow-connectors/sql-flow-jdbc/pom.xml
@@ -3,23 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>sql-flow</artifactId>
+        <artifactId>sql-flow-connectors</artifactId>
         <groupId>com.github.myetl</groupId>
         <version>1.6.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>sql-flow-connectors</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>sql-flow-jdbc</module>
-    </modules>
+    <artifactId>sql-flow-jdbc</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.37</version>
+            <groupId>com.github.myetl</groupId>
+            <artifactId>sql-flow-core</artifactId>
+            <version>1.6.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
