--- a/sql-flow-api/pom.xml
+++ b/sql-flow-api/pom.xml
@@ -1,30 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>sql-flow</artifactId>
         <groupId>com.github.myetl</groupId>
-        <version>1.6.0-SNAPSHOT</version>
+        <version>1.9.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>sql-flow-api</artifactId>
-    <packaging>jar</packaging>
 
-    <dependencies>
-
-        <dependency>
-            <artifactId>sql-flow-core</artifactId>
-            <groupId>com.github.myetl</groupId>
-            <version>1.6.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.vertx</groupId>
-            <artifactId>vertx-core</artifactId>
-            <version>3.5.4</version>
-        </dependency>
-    </dependencies>
 
 </project>
