--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,31 @@
+.DS_Store
+node_modules
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 # Compiled class file
 .idea
 *Test.java
+*test
 /.idea/*
 .vertx/
 target/
-MyTest*.java
 *.class
 *.iml
 # Log file
@@ -13,7 +34,6 @@ MyTest*.java
 # BlueJ files
 *.ctxt
 
-# Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
 # Package Files #
@@ -24,6 +44,4 @@ MyTest*.java
 *.zip
 *.tar.gz
 *.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
