--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 .DS_Store
 node_modules
 /dist
@@ -21,7 +22,7 @@ yarn-error.log*
 *.sw?
 # Compiled class file
 .idea
-*Test.java
+*Test
 *test
 /.idea/*
 .vertx/
