--- a/fiflow-ui/package.json
+++ b/fiflow-ui/package.json
@@ -10,9 +10,9 @@
     "dependencies": {
         "axios": "^0.19.2",
         "core-js": "^3.6.4",
+        "element-ui": "^2.13.0",
         "lodash": "^4.17.15",
         "monaco-editor": "^0.20.0",
-        "view-design": "^4.1.3",
         "vue": "^2.6.11",
         "vue-router": "^3.1.6",
         "vuescroll": "^4.15.0"
