--- a/fiflow-web/pom.xml
+++ b/fiflow-web/pom.xml
@@ -28,6 +28,13 @@
     </dependencyManagement>
 
     <dependencies>
+
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-core</artifactId>
+            <version>4.0.0-milestone4</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
