--- a/fiflow-web/src/main/resources/application.properties
+++ b/fiflow-web/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.application.name=fiflow
 server.servlet.context-path=/fiflow
 spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations=classpath:/static/
+
+spring.datasource.url=jdbc:mysql://fiflowdb:3306/flink?serverTimezone=Asia/Shanghai
+spring.datasource.username=root
+spring.datasource.password=root
+
